css/main.css
/* ==========================================================================
   Author's custom styles
   ========================================================================== */

@import url(http://fonts.googleapis.com/css?family=Rajdhani:300,400);
@import url(http://fonts.googleapis.com/css?family=Raleway);


html,
body {
    height: 100%;
    margin: 0;
    padding: 0;
}

p {

  font-family: 'Raleway', sans-serif;
}

/* COLOR CHANGING ANIMATIONS */
/* BACKGROUND COLOR ANIMATION */
@-webkit-keyframes bg-color-anim{
  0%{
    background: rgb(102, 204, 153)
  }

  40%{
    background:rgb(102, 102, 204)
  }

  80%{
    background:rgb(102, 102, 204)
  }

  100%{
    background:rgb(102, 204, 153)
  }

}

@-moz-keyframes bg-color-anim{
  0%{
    background: rgb(102, 204, 153)
  }

  40%{
    background:rgb(102, 102, 204)
  }

  80%{
    background:rgb(102, 102, 204)
  }

  100%{
    background:rgb(102, 204, 153)
  }

}

@-o-keyframes bg-color-anim{
  0%{
    background: rgb(102, 204, 153)
  }

  40%{
    background:rgb(102, 102, 204)
  }

  80%{
    background:rgb(102, 102, 204)
  }

  100%{
    background:rgb(102, 204, 153)
  }

}
/* COLOR ANIMATION */
@-webkit-keyframes color-anim{
  0%{
    color:rgb(102, 204, 153)
  }

  40%{
    color:rgb(102, 102, 204)
  }

  80%{
    color:rgb(102, 102, 204)
  }

  100%{
    color:rgb(102, 204, 153)
  }

}

@-moz-keyframes color-anim{
  0%{
    color:rgb(102, 204, 153)
  }

  40%{
    color:rgb(102, 102, 204)
  }

  80%{
    color:rgb(102, 102, 204)
  }

  100%{
    color:rgb(102, 204, 153)
  }

}

@-o-keyframes color-anim{
  0%{
    color:rgb(102, 204, 153)
  }

  40%{
    color:rgb(102, 102, 204)
  }

  80%{
    color:rgb(102, 102, 204)
  }

  100%{
    color:rgb(102, 204, 153)
  }

}

/*  #Global Animation
//  ================================================== */

  .animate-in {
    -webkit-transition: none !important;
    -moz-transition: none !important;
    -o-transition: none !important;
    -ms-transition: none !important;
    transition: none !important;
  }

  .animate-in {
    visibility: hidden !important;
    opacity: 0;
  }

  .animating
  {
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-timing-function: ease-in-out; 
    animation-timing-function: ease-in-out; 
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
  }

  .no-js .animate-in,
  .ie .animate-in {
    visibility: visible !important;
    opacity: 1;
  }

/*  #Fade In
//  ================================================== */

  @-webkit-keyframes fadeIn {
    0% { opacity: 0; }
    100% { opacity: 1; }
  }

  @keyframes fadeIn {
    0% { opacity: 0; }
    100% { opacity: 1; }
  }

  .animating.fade-in {
    -webkit-animation-name: fadeIn;
    animation-name: fadeIn;
  }

/* NAVBAR */

.navbar-inverse {
  border-color: #fff;
  background-image: none;
  -webkit-animation:bg-color-anim 30s linear infinite;
  -moz-animation:bg-color-anim 30s linear infinite;
  -o-animation:bg-color-anim 30s linear infinite;
}

.navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a {
  color: #fff;
  text-shadow: none;
  font-size: 20px;
}

.navbar-inverse .navbar-brand {
  color: #fff;
}

.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.active>a {
  background-color: white;
  background-image: none;
  -webkit-box-shadow: none;
  box-shadow: none;
  color: black;

}

.nav a:hover {
  background-color: white;
  background-image: none;
  -webkit-box-shadow: none;
  box-shadow: none;
  color: black;
  
}

/* HEADER */

#header {
  font-family: 'Rajdhani', sans-serif;
  color: #fff;
}



#header h1 {
	font-size: 100px;
	
}

#header .row-flex {
  position: absolute;
  width: 100%;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -o-transform: translate(-50%, -50%);
}

#header p {
	font-size: 28px;
	font-weight: 400;
  padding: 0 10px;
}

#header video#bgvid {
position: absolute;
right: 0;
bottom: 0;
min-width: 100%;
min-height: 100%;
width: auto;
z-index: -100;
background: url(https://zippy.gfycat.com/DependableWindyFairybluebird.gif) no-repeat center center; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: auto;
visibility: hidden;
}

#header .container {
  position: relative;
  padding-top: 30%;
  padding-bottom: 30%;
  min-height: 100%;
  height: 100vh;
  vertical-align: middle;
} 

@media (min-width: 768px) {

	#header .container {
	  padding-top: 15%;
	  height: 100vh;

	} 

  #header h1 {

    font-size: 132px;
  
  }

  .container {
    min-height: 100%;
  }

  #header #mouse-icon {
    visibility: visible;
    padding: 0;

  }

  #header video#bgvid {
    visibility: visible;
  }
}

.padding-top {
  padding-top: 30px;
}
.padding-bottom {
  padding-bottom: 95px;
}

.container {
	min-height: 100%;
  height: auto;
	font-family: 'Rajdhani', sans-serif;
}

.section-title {
	padding-bottom: 70px;
	
}

.section-title h1 {
	font-style: light;
	display: inline-block;
	position: relative;
	font-size: 50px;
	font-weight: 400;
	margin-bottom: 20px;
	padding-bottom: 22px;
}

.white-bg {
  color: #333;
}

.color-bg {
  color: #fff;
}

.color-bg small {
  color: #6666CC;
}

.section-title h1:after {
	background-color: #66CC99;
	content: "";
	left: 50%;
	bottom: 0;
	height: 3px;
	margin-left: -85px;
	position: absolute;
	width: 170px;
}

.color-bg .section-title h1:after{
  background-color: #66CC99;
}

.section-title h1 small {
	font-size: 22px;
	font-weight: 300;
}

.section-title p {
	font-size: 20px;
	font-weight: 400;
}
/* ... */

